Refactor navigation test context and list access